# MotionSense

./: README.md
background_substraction/: CMakeLists.txt  background_substractor.cpp
pose_detection/: joints.py
videos/: iphoneSwing.webm
